# OrganelleCleaner

./: .gitignore  README.md  blast_features.py  environment.yml  graph_analysis.py  organelle_cleaner.py  organelle_scoring.py  parse_gfa.py  pyproject.toml  sequence_features.py  setup.py
organelle_cleaner/: __init__.py  blast_features.py  cli.py  graph_analysis.py  internal_blast.py  organelle_scoring.py
tests/: test_blast_features.py  test_hybrid_scoring.py  test_internal_blast.py  test_organelle_cleaner.py  test_size_bins.py
